--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,16 +3,12 @@
 search: false
 ---
 
-$doc-font-size-large: 1.25rem !default;
-
-$doc-font-size-medium: 1.25rem !default;
-
-
 $max-width:90%;
 
 $footer-background-color: #0a4b11;
 $link-color: #0950bb;
 $masthead-link-color: #05A069;
+$doc-font-size-x-large: 2rem;
 
 .page__footer-copyright,
 .page__footer-follow .social-icons a,
@@ -21,6 +17,8 @@ $masthead-link-color: #05A069;
 .page__footer-follow .social-icons .svg-inline--fa  {
   color: white;
 }
+
+
 .author__urls.social-icons .svg-inline--fa,
 .masthead,
 .masthead a {
