solve variable error

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,6 +9,7 @@ $footer-background-color: #0a4b11;
 $link-color: #0950bb;
 $masthead-link-color: #05A069;
 $doc-font-size-x-large: 2rem;
+$right-sidebar-width-narrow-one: 300px;
 
 .page__footer-copyright,
 .page__footer-follow .social-icons a,
